<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPincode"
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:gravity="left|center"
        android:text="937983"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btCheck"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:text="check"
        android:background="@drawable/text_border_line"
        android:textColor="@color/colorSaffron"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toEndOf="@+id/tvPincode"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.appcompat.widget.AppCompatTextView
        android:paddingTop="7dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvDeleveryDesLine1"
        app:layout_constraintTop_toBottomOf="@+id/btCheck"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/delivery_des_line1"
        android:textColor="@color/colorGreen"
        android:drawableStart="@drawable/ic_check_green_14dp"
        android:textSize="12dp"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:paddingVertical="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvDeleveryDesLine2"
        app:layout_constraintTop_toBottomOf="@+id/tvDeleveryDesLine1"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/delivery_des_line2"
        android:textColor="@color/colorGreen"
        android:drawableStart="@drawable/ic_check_green_14dp"
        android:textSize="12dp"

        />
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvDeleveryDesLine3"
        app:layout_constraintTop_toBottomOf="@+id/tvDeleveryDesLine2"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/delivery_des_line3"
        android:textColor="@color/colorGreen"
        android:drawableStart="@drawable/ic_check_green_14dp"
        android:textSize="12dp"

        />




</androidx.constraintlayout.widget.ConstraintLayout>